--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,3 +4,6 @@ build-std = ["core", "compiler_builtins"]
 
 [build]
 target = ".cargo/x86_64-test_os.json"
+
+[target.'cfg(target_os = "none")']
+runner = "bootimage runner"
