--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 bootloader = "0.9"
+lazy_static = { version = "1.5.0", features = ["spin_no_std"], default-features = false }
+spin = "0.9.8"
 volatile = "0.2.6"
