--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bootloader = "0.9"
 lazy_static = { version = "1.5.0", features = ["spin_no_std"], default-features = false }
+pic8259 = "0.11.0"
 spin = "0.9.8"
 uart_16550 = "0.3.1"
 volatile = "0.2.6"
