--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bootloader = "0.9"
+bootloader = { version = "0.9", features = ["map_physical_memory"] }
 lazy_static = { version = "1.5.0", features = ["spin_no_std"], default-features = false }
 pc-keyboard = "0.7.0"
 pic8259 = "0.11.0"
