--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bootloader = { version = "0.9", features = ["map_physical_memory"] }
 lazy_static = { version = "1.5.0", features = ["spin_no_std"], default-features = false }
+linked_list_allocator = "0.9.0"
 pc-keyboard = "0.7.0"
 pic8259 = "0.11.0"
 spin = "0.9.8"
