--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 bootloader = { version = "0.9", features = ["map_physical_memory"] }
+conquer-once = { version = "0.4.0", default-features = false }
+crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
+futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
 lazy_static = { version = "1.5.0", features = ["spin_no_std"], default-features = false }
 linked_list_allocator = "0.10.5"
 pc-keyboard = "0.7.0"
